<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">猪险</string>
    <!--<string name="app_name">猪险测试版</string>-->
    <string name="no_camera_permission_granted">No Camera permission granted.</string>
    <string name="loadImage">打开相册</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="record">采集</string>
    <string name="stop">取消</string>
    <string name="pause">暂停</string>
    <string name="dialog_title">提示</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phonenum">手机号</string>
    <string name="prompt_code">验证码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_get_code">获取验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_code">This code is too short</string>
    <string name="error_incorrect_password">Login Failed!</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lipei">理赔</string>
    <string name="toubao">投保</string>
    <string name="fullname">投保人</string>
    <string name="jump">跳转</string>
    <string name="OpenAlbulm">ZIP</string>
    <string name="recognizeImage">识别</string>
    <string name="error_noAngle">角度补充</string>
    <string name="error_msgAdd">请补充</string>
    <string name="error_button_ok">前往补充</string>
    <string name="btnNextPig">下一头</string>
    <string name="noAngle">角度补充</string>
    <string name="view_photo">查看</string>
    <string name="Username">Username</string>
    <string name="App">PHPMySQL</string>
    <string name="Role">role</string>
    <string name="LoginRole">LoginRole</string>
    <string name="method">method</string>
    <string name="LoginStatus">LoginStatus</string>
    <string name="Status">Status</string>
    <string name="Choose">Choose</string>
    <string name="LoginPost">LoginPost</string>
    <string name="LoginGet">LoginGet</string>
    <string name="Password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">巡检明细</string>

    <string name="Alternativefarm">选择养殖场</string>

    <string-array name="farm_location_arrays">
        <item>501养殖场</item>
        <item>test1养殖场</item>
        <item>正邦养殖场</item>
        <item>国元养殖场</item>
        <item>郑州养殖场</item>
        <item>秦皇岛养殖场</item>
        <item>南昌养殖场</item>
        <item>石家庄养殖场</item>
    </string-array>
    <string name="title_activity_remote_camera">RemoteCameraActivity</string>

    <string name="idPostive">身份证正面照片</string>
    <string name="businessLicense">营业执照照片</string>
    <string name="appwarning">需要开启权限才可以使用!</string>
    <string name="locationwarning">您还未开启GPS,现在去开启吗?</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="deadpig_process_skip_tip">无害化处理步骤还未完成，跳过当前页面数据将清除，您确定要跳过吗？</string>
    <string name="deadpig_process_back_tip">无害化处理当前步骤还未完成，退回上一步当前页面数据将清除，您确定要返回上一步吗？</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login_new">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_password">This password is too short</string>

    <string name="error_message_name">请输入中文用户名</string>
    <string name="error_message_phonenumber">手机号错误</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">密码错误</string>
    <string name="success_message">注册成功</string>
    <string name="text_not_member">No Account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_user_exists">该用户已存在，请直接登录</string>
    <string name="error_password_match">两次输入密码不一致</string>
    <string name="error_valid_username_password">密码或手机号错误！！</string>
    <string name="error_message_idnumber">错误的身份证号</string>
    <string name="error_message_company">错误的所属公司</string>
    <string name="error_message_phone_number">手机号错误</string>
    <string name="error_message_checkcode">验证码错误</string>
    <string name="version_name">版本：</string>
    <string name="expression">((^(13|15|17|18)[0-9]{9}$)|(^0[1,2]{1}\\d{1}-?\\d{8}$)|(^0[3-9] {1}\\d{2}-?\\d{7,8}$)|(^0[1,2]{1}\\d{1}-?\\d{8}-(\\d{1,4})$)|(^0[3-9]{1}\\d{2}-? \\d{7,8}-(\\d{1,4})$))</string>
    <string name="new_baodan">新建保单</string>
    <string name="build_insure">新建验标单</string>
    <string name="pay_apply_animal">新建理赔单</string>
    <string name="new_enterprise_baodan">新建企业保单</string>
    <string name="new_organization_baodan">新建组织验标单</string>
    <string name="bankCard">银行卡正面照片</string>
    <string name="uploadwarning">您还没有已审核的保单</string>
    <string name="selectwarning">您还未选择牲畜信息</string>


    <string name="word">我</string>

    <string name="pig_house_list">猪舍列表</string>
    <string name="pig_house_name">猪舍名称</string>
    <string name="pig_house_type">猪舍类型</string>
    <string name="submit">确认</string>

    <string name="sure_to_add">确认添加当前猪舍吗？</string>
    <string name="compensate_time">理赔时间：</string>
    <string name="insurance_no">保单号：</string>
    <string name="pig_house_name1">猪舍名称：</string>

    <string name="pre_pay_time">预理赔时间：</string>
    <string name="cause_of_death">死亡原因：</string>
    <string name="she_name">猪舍名称：</string>
    <string name="info_pre_pay">预理赔信息</string>
    <string name="info_compensate">理赔信息</string>
    <string name="info_insurance">投保信息</string>
    <string name="info_pig_house">猪舍信息</string>
    <string name="weight">体重：</string>
    <string name="identification_code">标的识别码：</string>
    <string name="similarity">相似度：</string>
    <string name="coefficient">系数：</string>
    <string name="insurance_amount">投保数量：</string>
    <string name="insurance_total_amount">投保总数：</string>
    <string name="checked">已审核</string>
    <string name="unchecked">待审核</string>
    <string name="about_us">关于我们</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="version_updating">版本更新</string>
    <string name="setting">设置</string>
    <string name="new_version">发现新版本</string>
    <string name="neglect">忽略</string>
    <string name="updating">升级</string>
</resources>
