<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="innovation.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:paddingTop="20dp"
            android:scaleType="center"
            android:src="@mipmap/ic_logo" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/get_phonenum_checkcode_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    style="@style/EditText"
                    android:hint="@string/prompt_phonenum"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/get_checkcode_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/ic_bt_bg"
                    android:text="@string/action_get_code"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                style="@style/EditText"
                android:hint="@string/prompt_code"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="InvalidImeActionId" />

            <Button
                android:id="@+id/phone_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/ic_bt_bg"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
