<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_13"
    android:paddingTop="@dimen/dp_13"
    android:paddingRight="@dimen/dp_13">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_insurance_list_item"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_21"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_pig_house_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFF333333"
                android:textSize="@dimen/dp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/coefficient"
                android:layout_marginLeft="@dimen/dp_8"
                android:textColor="@color/app_base_color"
                android:textSize="@dimen/dp_10" />

            <TextView
                android:id="@+id/tv_coefficient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textColor="@color/app_base_color"
                android:textSize="@dimen/dp_10" />

            <TextView
                android:id="@+id/tv_term_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dp_14"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/colorC6C6C6"
                android:textSize="@dimen/dp_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_26"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_22"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/C_666666"
                android:text="@string/insurance_amount"/>
            <TextView
                android:id="@+id/tv_insurance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/C_666666"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/C_666666"
                android:layout_marginLeft="@dimen/dp_18"
                android:text="@string/insurance_total_amount"/>
            <TextView
                android:id="@+id/tv_insurance_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_12"
                android:textColor="@color/C_666666"/>
            <TextView
                android:id="@+id/tv_checked"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_10"
                android:textColor="@color/app_base_color"
                android:text="@string/checked"
                android:layout_gravity="center_vertical"
                android:gravity="right"/>
            <TextView
                android:id="@+id/tv_unchecked"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_10"
                android:textColor="@color/colorFF999999"
                android:text="@string/unchecked"
                android:layout_gravity="center_vertical"
                android:gravity="right"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>