<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_66"
        android:background="@drawable/bg_white_circle_5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_84"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_version"
                android:textColor="@color/colorFF333333"
                android:textSize="@dimen/dp_20" />

            <TextView
                android:id="@+id/tv_new_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColor="@color/colorFF333333"
                android:textSize="@dimen/dp_10" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_upgradeinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_30"
            android:textColor="@color/C_666666"
            android:textSize="@dimen/dp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_26">

            <TextView
                android:id="@+id/tv_neglect"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_weight="1"
                android:background="@drawable/bg_cancle_btn"
                android:text="@string/neglect"
                android:gravity="center"
                android:textColor="@color/colorFF999999"
                android:textSize="@dimen/dp_14"/>

            <TextView
                android:id="@+id/tv_updating"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_weight="1"
                android:background="@drawable/bg_confirm_btn"
                android:text="@string/updating"
                android:gravity="center"
                android:textSize="@dimen/dp_14"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/dp_12"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/iv_version_updatime" />
</RelativeLayout>