<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_13"
    android:paddingTop="@dimen/dp_13"
    android:paddingRight="@dimen/dp_13">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dp_5"
        app:cardElevation="@dimen/dp_11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_13">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pig_house_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorFF333333"
                    android:textSize="@dimen/dp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insurance_no"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_12" />

                <TextView
                    android:id="@+id/tv_guarantee_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_21"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/iv_pre_right_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />


                <ImageView
                    android:id="@+id/iv_pre_middle_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/iv_pre_left_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_11"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/iv_right_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />


                <ImageView
                    android:id="@+id/iv_middle_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/iv_left_face"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_pay_time"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_11" />

                <TextView
                    android:id="@+id/tv_pre_pay_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_11" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compensate_time"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_11" />

                <TextView
                    android:id="@+id/tv_compensate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorFF999999"
                    android:textSize="@dimen/dp_11" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_7"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"
                    android:text="@string/identification_code"/>
                <TextView
                    android:id="@+id/tv_identification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_9"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"
                    android:text="@string/weight"/>
                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"
                    android:layout_marginLeft="@dimen/dp_22"
                    android:text="@string/similarity"/>
                <TextView
                    android:id="@+id/tv_similarity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_12"
                    android:textColor="@color/C_666666"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>