<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PigHouseListActivity">

    <View
        android:id="@+id/v_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_half_translucent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/cl_layout"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pig_house_name"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/et_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_local"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="猪舍名称"
            android:textColor="@color/colorText_333"
            android:textSize="16dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="@+id/tv_name"/>

        <TextView
            android:id="@+id/tv_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/pig_house_type"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_pig_type"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tv_pig_type"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableRight="@drawable/ic_down"
            android:padding="10dp"
            android:textColor="@color/colorText_333"
            android:text="请选择类型"
            android:textSize="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_local"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_local"/>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button_onclick"
            android:gravity="center"
            android:paddingStart="65dp"
            android:paddingEnd="65dp"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>